fix: 557 - add nowrap to the title

--- a/src/widgets/numbers/ui/numbers/numbers.module.scss
+++ b/src/widgets/numbers/ui/numbers/numbers.module.scss
@@ -6,6 +6,10 @@
   align-items: center;
   justify-content: center;
 
+  .numbers-title {
+    white-space: nowrap;
+  }
+
   .numbers-map {
     position: absolute;
     z-index: -1;
